refactor: 문자열 변환 및 예외 처리 로직 메서드 분리